# gnss-orbital

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  ENGRAM.md  LICENSE  README.es.md  README.md  README.zh.md  README_ZH.md  pyproject.toml  requirements.txt  vercel.json
.claude/: launch.json
archive/: add_jupyter_tab.py  app.py  inject_constellation.py  inject_glassmorphism.py  inject_liquid.py  inject_organism.py  karmaloop.yaml  patch_constellation.py  patch_css.py  patch_i18n_organism.py  patch_liquid.py  reorganize.py  update_app.py  update_backend_wiring.py
backend/: main.py
docs/: agent_architecture.md  api_reference.md  astronomy_fundamentals.md  astronomy_fundamentals_es.md  astronomy_fundamentals_zh.md  design_patterns.md  gnss_orbital_mechanics.md  gnss_orbital_mechanics_es.md  gnss_orbital_mechanics_zh.md  gnss_positioning_precision.md  gnss_positioning_precision_es.md  gnss_positioning_precision_zh.md  installation_guide.md  new_space_context.md  orbital_calculations.md  orbital_calculations_es.md  orbital_calculations_zh.md  orbital_perturbations.md  orbital_perturbations_es.md  orbital_perturbations_zh.md  orbital_theory.md  space_infrastructure_2030.md  space_infrastructure_2030_es.md  space_infrastructure_2030_zh.md
examples/: __init__.py  hohmann_transfer.py  kepler_equation.py  leo_orbit.py  orbit_comparison.py
frontend/: documents.js  index.html  patch_backend.py
locales/: en.json  es.json  zh.json
notebooks/: 01_interactive_orbits.ipynb  02_kepler_equation.ipynb  03_iris2_constellation.ipynb
scripts/: start.ps1
(+36 files in other folders)
